test/libsolidity/syntaxTests/nameAndTypeResolution/531_tuple_invalid_literal_too_large_unassigned.sol
contract C {
    function f() pure public {
        uint x;
        (x, ) = (1, 1E111);
    }
}
// ----
// TypeError 3390: (80-85='1E111'): Invalid rational number.
